--- a/index.html
+++ b/index.html
@@ -14,36 +14,30 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="cleartype" content="on">
-    <meta name="robots" content="index,follow" />
 
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/typography.css">
 
-    <!--[if lt IE 9]>
-         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <script>window.html5 || document.write('<script src="js/html5shiv.js"><\/script>')</script>
-    <![endif]-->
+    <script type="text/javascript" src="//use.typekit.net/yju6tan.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
   </head>
   <body>
 
-      <div class="header-container">
-          <header class="wrapper clearfix">
-              <h1 class="title">h1.title</h1>
-              <nav>
-                  <ul>
-                      <li><a href="#">nav ul li a</a></li>
-                      <li><a href="#">nav ul li a</a></li>
-                      <li><a href="#">nav ul li a</a></li>
-                  </ul>
-              </nav>
-          </header>
-      </div>
+    <header>
+      <h1 class="title">The Layouts Ahead</h1>
+      <nav>
+        <ul>
+          <li><a href="rotation">Rotation Demo</a></li>
+          <li><a href="viewportunits">Viewport Units Demo</a></li>
+          <li><a href="shapes">Shapes Demo</a></li>
+          <li><a href="multicolumn">Multi-Column Layout Demo</a></li>
+        </ul>
+      </nav>
+    </header>
 
-          <main role="main">
-
-
-
-          </main>
+    <main role="main">
+      <p>Grab the code at <a href="https://github.com/jensimmons/thelayoutsahead">github.com/jensimmons/thelayoutsahead</a>.</p>
+    </main>
 
 
       <!-- Google Analytics -->
