completeing shapes demos

--- a/shapes/index.html
+++ b/shapes/index.html
@@ -40,24 +40,28 @@
 </section>
   
 <section class="third-example">        
-  <h1>shape-outside: </h1>      
+  <h1>shape-outside: ellipse (foo)</h1>      
   <img src="../images/cat-elipse.png">
   <p>Intelligent beings permanence of the stars decipherment hearts of the stars as a patch of light finite but unbounded dispassionate extraterrestrial observer with pretty stories for which there's little good evidence bits of moving fluff rogue stirred by starlight. White dwarf laws of physics how far away Jean-François Champollion two ghostly white figures in coveralls and helmets are soflty dancing cosmos, Sea of Tranquility vanquish the impossible prime number Cambrian explosion white dwarf? Kindling the energy hidden in matter with pretty stories for which there's little good evidence, circumnavigated. Hypatia consciousness. Cosmic fugue science globular star cluster. Explorations, rich in heavy atoms. Galaxies? Radio telescope. Dream of the mind's eye? Paroxysm of global death. Take root and flourish. Courage of our questions. Birth? Not a sunrise but a galaxyrise birth. Astonishment, prime number. The sky calls to us. Two ghostly white figures in coveralls and helmets are soflty dancing? Another world white dwarf. Extraplanetary! Across the centuries consciousness Flatland. Rings of Uranus, gathered by gravity star stuff harvesting star light, great turbulent clouds, preserve and cherish that pale blue dot the ash of stellar alchemy light years. Billions upon billions prime number? A very small stage in a vast cosmic arena science permanence of the stars, dispassionate extraterrestrial observer. Astonishment, radio telescope. Ship of the imagination. Tingling of the spine cosmos colonies concept of the number one, the only home we've ever known another world the carbon in our apple pies not a sunrise but a galaxyrise shores of the cosmic ocean realm of the galaxies inconspicuous motes of rock and gas star stuff harvesting star light network of wormholes. White dwarf. </p>  
 </section>  
 
 <section class="fourth-example">        
-  <h1>shape-outside: inset (foo)</h1>      
+  <h1>shape-outside: border-box</h1>      
   <img src="../images/cat-rectangle.jpg">
   <p>Intelligent beings permanence of the stars decipherment hearts of the stars as a patch of light finite but unbounded dispassionate extraterrestrial observer with pretty stories for which there's little good evidence bits of moving fluff rogue stirred by starlight. White dwarf laws of physics how far away Jean-François Champollion two ghostly white figures in coveralls and helmets are soflty dancing cosmos, Sea of Tranquility vanquish the impossible prime number Cambrian explosion white dwarf? Kindling the energy hidden in matter with pretty stories for which there's little good evidence, circumnavigated. Hypatia consciousness. Cosmic fugue science globular star cluster. Explorations, rich in heavy atoms. Galaxies? Radio telescope. Dream of the mind's eye? Paroxysm of global death. Take root and flourish. Courage of our questions. Birth? Not a sunrise but a galaxyrise birth. Astonishment, prime number. The sky calls to us. Two ghostly white figures in coveralls and helmets are soflty dancing? Another world white dwarf. Extraplanetary! Across the centuries consciousness Flatland. Rings of Uranus, gathered by gravity star stuff harvesting star light, great turbulent clouds, preserve and cherish that pale blue dot the ash of stellar alchemy light years. Billions upon billions prime number? A very small stage in a vast cosmic arena science permanence of the stars, dispassionate extraterrestrial observer. Astonishment, radio telescope. Ship of the imagination. Tingling of the spine cosmos colonies concept of the number one, the only home we've ever known another world the carbon in our apple pies not a sunrise but a galaxyrise shores of the cosmic ocean realm of the galaxies inconspicuous motes of rock and gas star stuff harvesting star light network of wormholes. White dwarf. </p>  
 </section>  
 
 <section class="fifth-example">        
-  <h1>shape-outside: </h1>      
-  <img src="../images/cat-oddshaped.png">
+  <h1>shape-outside: polygon(foo)</h1>      
+  <img src="../images/cat-diamond.png">
   <p>Intelligent beings permanence of the stars decipherment hearts of the stars as a patch of light finite but unbounded dispassionate extraterrestrial observer with pretty stories for which there's little good evidence bits of moving fluff rogue stirred by starlight. White dwarf laws of physics how far away Jean-François Champollion two ghostly white figures in coveralls and helmets are soflty dancing cosmos, Sea of Tranquility vanquish the impossible prime number Cambrian explosion white dwarf? Kindling the energy hidden in matter with pretty stories for which there's little good evidence, circumnavigated. Hypatia consciousness. Cosmic fugue science globular star cluster. Explorations, rich in heavy atoms. Galaxies? Radio telescope. Dream of the mind's eye? Paroxysm of global death. Take root and flourish. Courage of our questions. Birth? Not a sunrise but a galaxyrise birth. Astonishment, prime number. The sky calls to us. Two ghostly white figures in coveralls and helmets are soflty dancing? Another world white dwarf. Extraplanetary! Across the centuries consciousness Flatland. Rings of Uranus, gathered by gravity star stuff harvesting star light, great turbulent clouds, preserve and cherish that pale blue dot the ash of stellar alchemy light years. Billions upon billions prime number? A very small stage in a vast cosmic arena science permanence of the stars, dispassionate extraterrestrial observer. Astonishment, radio telescope. Ship of the imagination. Tingling of the spine cosmos colonies concept of the number one, the only home we've ever known another world the carbon in our apple pies not a sunrise but a galaxyrise shores of the cosmic ocean realm of the galaxies inconspicuous motes of rock and gas star stuff harvesting star light network of wormholes. White dwarf. </p>  
 </section>
-  
+
   </main>
+  
+  <footer>
+    <a href="../">Return to List of Demos</a>
+  </footer>
 
       <!-- Google Analytics -->
       <script>
