adding rotation demos

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <h1 class="title">The Layouts Ahead</h1>
       <nav>
         <ul>
-          <li><a href="rotation">Rotation Demo</a></li>
+          <li><a href="shapes/index.html">Shapes Demo</a></li>
+          <li>Rotation: <a href="rotation">Demo 1</a>, <a href="rotation/index2.html">Demo 2</a>, <a href="rotation/index3.html">Demo 3</a></li>
           <li><a href="viewportunits">Viewport Units Demo</a></li>
-          <li><a href="shapes">Shapes Demo</a></li>
           <li><a href="multicolumn">Multi-Column Layout Demo</a></li>
         </ul>
       </nav>
