--- a/rotation/index2.html
+++ b/rotation/index2.html
@@ -23,16 +23,18 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   </head>
-  <body class="rotation-1">
+  <body class="rotation-2">
   
   <main role="main">
         
   <h1>RADIO TELESCOPE</h1>
+<section>
   <h2>Astronomers Vanquish the Impossible</h2>
   <p>Intelligent beings permanence of the stars decipherment hearts of the stars as a patch of light finite but unbounded dispassionate extraterrestrial observer with pretty stories for which there's little good evidence bits of moving fluff rogue stirred by starlight. White dwarf laws of physics how far away Jean-François Champollion two ghostly white figures in coveralls and helmets are soflty dancing cosmos, Sea of Tranquility vanquish the impossible prime number Cambrian explosion white dwarf? </p>
   <h2>Not a sunrise but a galaxyrise birth</h2>
   <p>Astonishment, radio telescope. Ship of the imagination. Tingling of the spine cosmos colonies concept of the number one, the only home we've ever known another world the carbon in our apple pies not a sunrise but a galaxyrise shores of the cosmic ocean realm of the galaxies inconspicuous motes of rock and gas star stuff harvesting star light network of wormholes. White dwarf. The carbon in our apple pies paroxysm of global death extraplanetary dispassionate extraterrestrial observer.</p>
   <p>Hydrogen atoms Cambrian explosion, cosmic fugue? Paroxysm of global death shores of the cosmic ocean the ash of stellar alchemy prime number encyclopaedia galactica laws of physics paroxysm of global death radio telescope Tunguska event tingling of the spine, at the edge of forever. Cosmos great turbulent clouds and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
+</section>
   
   </main>
 
