adding notes to remind people to use the right browser

--- a/multicolumn/index.html
+++ b/multicolumn/index.html
@@ -26,6 +26,7 @@
   <body class="vp-1 alt">
   
   <main role="main">
+<p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=multicolumn">supports Multicolumn Layout</a></p>
   
   <article>
     <h1>Multicolumn Layout</h1>
