--- a/rotation/index2.html
+++ b/rotation/index2.html
@@ -26,6 +26,7 @@
   <body class="rotation-2">
   
   <main role="main">
+<p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=transforms2d">supports Transforms</a></p>
         
   <h1>RADIO TELESCOPE</h1>
 <section>
