--- a/shapes/index.html
+++ b/shapes/index.html
@@ -26,6 +26,7 @@
   <body>
   
   <main role="main">
+<p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=css-shapes">supports CSS Shapes, level 1</a></p>
 
 <section class="first-example">        
   <h1>traditional float left</h1>      
