--- a/viewportunits/index.html
+++ b/viewportunits/index.html
@@ -23,6 +23,7 @@
 
   </head>
   <body class="vp-1 alt">
+<p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=viewport-units">supports Viewport Units.</a></p>
   
   <main role="main">
   <img src="../images/GraceHopper.jpg">
