--- a/flexbox/cover-sheet.html
+++ b/flexbox/cover-sheet.html
@@ -16,7 +16,7 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/viewport-2.css">
+    <link rel="stylesheet" href="../css/viewport-flexbox.css">
 
     <script type="text/javascript" src="//use.typekit.net/yju6tan.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -26,8 +26,7 @@
   
   <main role="main">
     <header class="shorter">
-      <h1>Almost full-height “Cover Sheet”</h1>
-      <h2>Let what is below<br>peek through</h2>
+      <h1>Cover Sheet</h1>
     </header>
     <article>
     <p> If we could first know where we are, and whither we are tending, we could then better judge what to do, and how to do it. We are now far into the fifth year, since a policy was initiated, with the avowed object, and confident promise, of putting an end to slavery agitation. Under the operation of that policy, that agitation has not only, not ceased, but has constantly augmented. In my opinion, it will not cease, until a crisis shall have been reached, and passed.</p>
@@ -39,7 +38,7 @@
   
   <p>Let any one who doubts, carefully contemplate that now almost complete legal combination — piece of machinery so to speak — compounded of the Nebraska doctrine, and the Dred Scott decision. Let him consider not only what work the machinery is adapted to do, and how well adapted; but also, let him study the history of its construction, and trace, if he can, or rather fail, if he can, to trace the evidence of design and concert of action, among its chief architects, from the beginning.</p>  <article>
   <footer>
-    <p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=viewport-units">supports Viewport Units.</a></p>
+    <p>Be sure to run this demo in a browser that <a href="http://caniuse.com/#feat=viewport-units">supports Viewport Units</a> and <a href="http://caniuse.com/#feat=flexbox">Flexbox</a> </p>
     <a href="../">Return to List of Demos</a>
   </footer>
   </main>
