--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>Rotation: <a href="rotation">Demo 1</a>, <a href="rotation/index2.html">Demo 2</a>, <a href="rotation/index3.html">Demo 3</a></li>
           <li>Viewport Units: <a href="viewportunits">Demo 1</a>, <a href="viewportunits/cover-sheet.html">Demo 2</a>, <a href="viewportunits/cover-sheet-2.html">Demo 3</a></li>
           <li><a href="multicolumn">Multi-Column Layout Demo</a></li>
-          <li>Flexbox: <a href="flexbox">Demo 1</a>, <a href="flexbox/index2.html">Demo 2</a>, <a href="flexbox/index3.html">Demo 3</a></li>
+          <li>Flexbox: <a href="flexbox/cover-sheet.html">Demo 1</a>, <a href="flexbox/index2.html">Demo 2</a>, <a href="flexbox/index3.html">Demo 3</a></li>
         </ul>
       </nav>
     </header>
