a bunch of work I did earlier, finally commited

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="css/home.css">
 
     <script type="text/javascript" src="//use.typekit.net/yju6tan.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -25,18 +26,18 @@
 
     <header>
       <h1 class="title">The Layouts Ahead</h1>
-      <nav>
-        <ul>
-          <li><a href="shapes/index.html">Shapes Demo</a></li>
-          <li>Rotation: <a href="rotation">Demo 1</a>, <a href="rotation/index2.html">Demo 2</a>, <a href="rotation/index3.html">Demo 3</a>, <a href="rotation/index4.html">Demo 4 (responsive)</a></li>
-          <li>Viewport Units: <a href="viewportunits">Demo 1</a>, <a href="viewportunits/cover-sheet.html">Demo 2</a>, <a href="viewportunits/cover-sheet-2.html">Demo 3</a></li>
-          <li><a href="multicolumn">Multi-Column Layout Demo</a></li>
-          <li>Flexbox: <a href="flexbox/cover-sheet.html">Demo 1</a>, <a href="flexbox/index2.html">Demo 2</a>, <a href="flexbox/index3.html">Demo 3</a></li>
-        </ul>
-      </nav>
     </header>
 
     <main role="main">
+      <nav>
+        <ul class="demo-list">
+          <li class="demo"><h2>Shapes</h2><ul><li><a href="shapes/index.html">Demo</a></li></ul></li>
+          <li class="demo"><h2>Rotation</h2><ul><li><a href="rotation/index.html">Demo 1</a></li><li><a href="rotation/index2.html">Demo 2</a></li><li><a href="rotation/index3.html">Demo 3</a></li><li><a href="rotation/index4.html">Demo 4</a></li></ul></li>
+          <li class="demo"><h2>Viewport Units</h2><ul><li><a href="viewportunits">Demo 1</a></li><li><a href="viewportunits/cover-sheet.html">Demo 2</a></li><li><a href="viewportunits/cover-sheet-2.html">Demo 3</a></li></ul></li>
+          <li class="demo"><h2>Multi-Column Layout</h2><ul><li><a href="multicolumn/index.html">Demo</a></li></ul></li>
+          <li class="demo"><h2>Flexbox</h2><ul><li><a href="flexbox/cover-sheet.html">Demo</a></li></ul></li>
+        </ul>
+      </nav>
       <p>Grab the code at <a href="https://github.com/jensimmons/thelayoutsahead">github.com/jensimmons/thelayoutsahead</a>.</p>
     </main>
 
