changing home page title for collection of example

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <header>
-      <h1 class="title">The Layouts Ahead</h1>
+      <h1 class="title">Examples for<br><i>Modern Layouts<br><span>Getting Out of Our Ruts<span></i></h1>
     </header>
 
     <main role="main">
